# VulkanMirage

./: CMakeLists.txt  README.md  compileShaders.bat  vcpkg.json
res/shaders/: closesthit.rchit  miss.rmiss  missRmiss.spv  raygen.rgen  raygenRgen.spv  shader.vert  shaderVert.spv
src/: VulkanMiragePathtracer.cpp  VulkanMiragePathtracer.h  main.cpp
src/app/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanMiragePathtracer.cpp  VulkanMiragePathtracer.h  main.cpp
src/commonTypes/: CommonTypes.ixx  Texture.h  Vertex.h
src/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model.ixx  Vertex.h
tracey/da/: da.ngfx-proj
